nautilus-fileroller: Avoid the use of g_dgettext

nautilus-fileroller is using g_dgettext which may cause problems
when extracting strings on some systems.

This patch replaces g_dgettext for g_dcgettext, which has the same
behaviour when the category is LC_MESSAGES.

https://bugzilla.gnome.org/show_bug.cgi?id=790569